--- a/Benchmark Result Analysis.ipynb
+++ b/Benchmark Result Analysis.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -53,20 +53,20 @@
       "Standard Deviation: 4.755616590800444\n",
       "\n",
       "opened amazon/ec2-cpu.csv\n",
-      "Average: 2292249.3655465418\n",
-      "Standard Deviation: 61098.84347410459\n",
+      "Average: 2285472.0431722817\n",
+      "Standard Deviation: 60855.60080255566\n",
       "\n",
       "opened amazon/ec2-disk-random.csv\n",
-      "Average: 12358.645833333334\n",
-      "Standard Deviation: 24384.957362126926\n",
+      "Average: 13732.553846153845\n",
+      "Standard Deviation: 25880.210111342058\n",
       "\n",
       "opened amazon/ec2-disk-sequential.csv\n",
-      "Average: 253520833.33333334\n",
-      "Standard Deviation: 24482724.76781818\n",
+      "Average: 254913043.47826087\n",
+      "Standard Deviation: 23433723.267745104\n",
       "\n",
       "opened amazon/ec2-mem.csv\n",
-      "Average: 5.018958333333335\n",
-      "Standard Deviation: 0.19429805118703067\n",
+      "Average: 5.059671352112676\n",
+      "Standard Deviation: 0.18437336507533514\n",
       "\n"
      ]
     }
@@ -77,11 +77,20 @@
     "        filename = '{}/{}-{}.csv'.format(cloud[0], cloud[1], benchmark)\n",
     "        csv = open(filename)\n",
     "        print(\"opened {}\".format(filename))\n",
-    "        measures = [float(line.split(\",\")[1]) for line in csv]\n",
+    "        time_values = [line.split(\",\") for line in csv]\n",
+    "        measures = [float(value) for _, value in time_values]\n",
     "        avg = sum(measures) / float(len(measures))\n",
     "        sdev = statistics.stdev(measures)\n",
     "        print(\"Average: {}\".format(avg))\n",
     "        print(\"Standard Deviation: {}\".format(sdev))\n",
+    "        \n",
+    "        i = 2\n",
+    "        last = int(time_values[0][0])\n",
+    "        for time in [int(time) for time, _ in time_values[1:]]:\n",
+    "            if time < last + 60*45 or time > last + 60 * 75:\n",
+    "                print(i)\n",
+    "            i += 1\n",
+    "            last = time\n",
     "        \n",
     "        print()"
    ]
